--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,7 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+firebase:
+  credentials:
+    path: ${FIREBASE_CREDENTIALS_PATH}
