--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,15 +2,36 @@ spring:
   application:
     name: soundCloud-BE
   datasource:
-    url: jdbc:mysql://localhost:3306/soundcloud_db
-    username: root
-    password: quannguyen2004
+    url: ${DATABASE_URL}
+    username: ${DATABASE_USERNAME}
+    password: ${DATABASE_PASSWORD}
 
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
 
 firebase:
-  credentials:
-    path: ${FIREBASE_CREDENTIALS_PATH}
+  service-account-path: ${FIREBASE_SERVICE_ACCOUNT_PATH}
+
+spotify:
+  client:
+    id: ${SPOTIFY_CLIENT_ID}
+    secret: ${SPOTIFY_CLIENT_SECRET}
+
+musixmatch:
+  api:
+    baseUrl: https://api.musixmatch.com/ws/1.1/
+    key: ${MUSIXMATCH_API_KEY}
+
+app:
+  music:
+    storage:
+      path: ${APP_MUSIC_STORAGE_PATH:music-downloads}
+
+ytdlp:
+  auto-install: true
+  executable-path: ${YTDLP_EXECUTABLE_PATH}
