update env example

--- a/src/main/resources/.env.example
+++ b/src/main/resources/.env.example
@@ -1,16 +1,15 @@
 # Database Configuration
 DATABASE_URL=jdbc:mysql://localhost:3306/soundcloud_db
 DATABASE_USERNAME=root
-DATABASE_PASSWORD=quannguyen2004
+DATABASE_PASSWORD=
 
 
 # Spotify API Configuration
-SPOTIFY_CLIENT_ID=d118cdd987e94966af2397122882ebf8
-SPOTIFY_CLIENT_SECRET=8872e57794054d958f25bfc4fa7b6509
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
 
 # Music Storage Configuration
 APP_MUSIC_STORAGE_PATH=music-downloads
 
 # YT-DLP Configuration
 YTDLP_EXECUTABLE_PATH=C:/yt-dlp/yt-dlp.exe
-
