Add ffmpeg support and update configuration
- Updated .gitignore to include music-downloads directory.
- Added ffmpeg and yt-dlp executables to the bin directory.
- Removed Hello_Vietnam_Vita_E.mp3 from music-downloads.
- Enhanced YtDlpConfig to include ffmpeg executable path.
- Modified YouTubeDownloadService to utilize ffmpeg for processing.
- Updated application.yml to configure ffmpeg executable path.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,3 +34,5 @@ app:
 ytdlp:
   auto-install: true
   executable-path: ${YTDLP_EXECUTABLE_PATH:}
+ffmpeg:
+  executable-path: ${FFMPEG_EXECUTABLE_PATH:}
